# PSL_backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
app/: cli.py  main.py
app/admin/: auth.py  hooks.py  setup.py  views.py
app/core/: config.py  cookies.py  db.py  dependencies.py  exceptions.py  logging.py  redis.py  security.py
app/migrations/: env.py
app/migrations/versions/: 0001_users_refresh_tokens.py  0002_stats_user_stats.py  0003_seed_stats.py  0004_activities.py  0005_seed_activity_templates.py
app/models/: __init__.py  activity.py  refresh_token.py  stat.py  user.py  user_stat.py
app/repositories/: activity_log_repo.py  activity_repo.py  refresh_token_repo.py  stat_repo.py  user_repo.py  user_stat_repo.py
app/routers/: activities.py  auth.py  users.py
app/schemas/: activity.py  auth.py  user.py
app/services/: activity_service.py  auth_service.py  leveling.py  user_service.py
app/tests/: conftest.py  test_activities.py  test_admin.py  test_auth.py  test_leveling.py  test_stats.py
docs/adrs/: 0001-layered-architecture-with-classes.md  0002-auth-cookies-csrf.md  0003-domain-errors-global-handlers.md  0004-xp-and-level-invariants.md  0005-stats-as-seeded-rows.md  0006-activity-log-per-stat-effects.md  0007-redis-template-cache.md  0008-tests-with-fallback.md  0009-stacked-pr-workflow.md  0010-fastapi-limiter-pin.md  README.md
