[project]
name = "psl-backend"
version = "0.1.0"
description = "Project Solo Levelling — real-life RPG backend"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "structlog>=24.4",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "redis>=5.0",
    "pyjwt>=2.9",
    "passlib[argon2]>=1.7",
    "email-validator>=2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "pre-commit>=4.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app"]

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "B",
    "UP",
    "ASYNC",
    "C4",
    "SIM",
    "RUF",
]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"app/migrations/*" = ["E402", "F401"]
"app/tests/*" = ["B011"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]
files = ["app"]
exclude = ["app/migrations/"]

[[tool.mypy.overrides]]
module = ["app.migrations.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["passlib.*"]
ignore_missing_imports = true
